--- a/sample.env
+++ b/sample.env
@@ -3,7 +3,7 @@ APP_NAME = ''
 
 #Postgre db connection requirements
 #These details can be obtained from  details of rds instance in AWS account
-DB_HOST = ''
+HOST = ''
 DB_USER = ''
-DB_PASSWORD = ''
-DB_NAME = ''
+PASSWORD = ''
+NAME = ''
