--- a/sample.env
+++ b/sample.env
@@ -1,9 +1,6 @@
-#application Name
-APP_NAME = ''
-
 #Postgre db connection requirements
 #These details can be obtained from  details of rds instance in AWS account
-DB_HOST = ''
-DB_USER = ''
-DB_PASSWORD = ''
-DB_NAME = ''
+HOST=''
+DB_USER=''
+PASSWORD=''
+NAME=''
