--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -21,4 +21,4 @@ jobs:
         pip install pylint
     - name: Analysing the code with pylint
       run: |
-        pylint --disable=C0301 $(git ls-files '*.py')
+        pylint --disable=C0301,R0903 $(git ls-files '*.py')
