--- a/requirements.txt
+++ b/requirements.txt
@@ -6,5 +6,6 @@ pre-commit == 2.19.0
 pre-commit-hooks == 4.3.0
 python-dotenv == 0.20.0
 python-multipart == 0.0.5
+sentry-sdk == 1.11.1
 sqlalchemy == 1.4.39
 uvicorn == 0.18.0
