--- a/.github/workflows/deta.yml
+++ b/.github/workflows/deta.yml
@@ -15,6 +15,7 @@ jobs:
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v2 #Be sure you check-out the repo first. Deta CLI needs access to the files
+      - uses: BogDAAAMN/deta-deploy-action@v1.0.1
         with:
           deta-access-token: ${{ secrets.DETA_TOKEN }} #Deta access token https://docs.deta.sh/docs/cli/auth
           deta-name: 'naruto-fastapi' #Deta Micro name https://docs.deta.sh/docs/cli/commands/#deta-clone
