--- a/.github/workflows/deta.yml
+++ b/.github/workflows/deta.yml
@@ -2,7 +2,7 @@ name: Deploy to Deta
 on:
   push:
     branches:
-      - deployment-on-deta
+      - nhost-db-migration
 
 # This will make sure that only one workflow runs at a time for a branch that triggered the workflow.
 concurrency:
